--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -48,5 +48,8 @@
     // "postCreateCommand": "pip3 install --user -r requirements.txt",
     "postCreateCommand": "virtualenv ~/.venv && echo 'source ~/.venv/bin/activate' >> ~/.bashrc && pip install --user -r requirements.txt",
     // Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-    "remoteUser": "vscode"
+    "remoteUser": "codespace",
+    "mounts": [
+        "source=codespaces-linux-var-lib-docker,target=/var/lib/docker,type=volume"
+    ]
 }
