--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -46,10 +46,7 @@
     // "forwardPorts": [],
     // Use 'postCreateCommand' to run commands after the container is created.
     // "postCreateCommand": "pip3 install --user -r requirements.txt",
-    "postCreateCommand": "virtualenv ~/.venv && echo 'source ~/.venv/bin/activate' >> ~/.bashrc && pip install --user -r requirements.txt",
+    "postCreateCommand": "virtualenv ~/.venv && pip3 install --user -r requirements.txt && echo 'source ~/.venv/bin/activate' >> ~/.bashrc",
     // Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-    "remoteUser": "codespace",
-    "mounts": [
-        "source=codespaces-linux-var-lib-docker,target=/var/lib/docker,type=volume"
-    ]
+    "remoteUser": "vscode"
 }
